--- a/demo-io/demo-io-file/demo-io-file-reader/pom.xml
+++ b/demo-io/demo-io-file/demo-io-file-reader/pom.xml
@@ -7,4 +7,11 @@
         <artifactId>demo-io-file</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.26</version>
+        </dependency>
+    </dependencies>
 </project>
