--- a/demo-io/demo-io-file/demo-io-file-reader/pom.xml
+++ b/demo-io/demo-io-file/demo-io-file-reader/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.corefine.demo</groupId>
         <artifactId>demo-io-file</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <dependencies>
         <dependency>
