--- a/demo-io/demo-io-file/pom.xml
+++ b/demo-io/demo-io-file/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.corefine.demo</groupId>
         <artifactId>demo-io</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modules>
         <module>demo-io-file-reader</module>
