--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.corefine.demo</groupId>
     <artifactId>demo</artifactId>
     <description>一些写得比较好的demo</description>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -22,7 +22,7 @@
             scm:git:git@github.com:corefine/fine-demo.git
         </developerConnection>
         <url>https://github.com/corefine/fine-demo</url>
-        <tag>demo-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
     <build>
         <plugins>
