--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.corefine.demo</groupId>
+    <name>fine demo</name>
     <artifactId>demo</artifactId>
     <description>一些写得比较好的demo</description>
     <version>1.0.0-SNAPSHOT</version>
@@ -12,9 +13,12 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
-    <properties>
-        <java.version>11</java.version>
-    </properties>
+    <developers>
+        <developer>
+            <name>Fe</name>
+            <email>fe@corefine.org</email>
+        </developer>
+    </developers>
     <scm>
         <connection>
             scm:git:git@github.com:corefine/fine-demo.git
@@ -25,6 +29,9 @@
         <url>https://github.com/corefine/fine-demo</url>
         <tag>HEAD</tag>
     </scm>
+    <properties>
+        <java.version>11</java.version>
+    </properties>
     <build>
         <plugins>
             <plugin>
