[maven-release-plugin] prepare release demo-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.corefine.demo</groupId>
     <name>demo</name>
     <artifactId>demo</artifactId>
     <description>一些写得比较好的demo</description>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -28,7 +27,7 @@
             scm:git:git@github.com:corefine/fine-demo.git
         </developerConnection>
         <url>https://github.com/corefine/fine-demo</url>
-        <tag>HEAD</tag>
+        <tag>demo-1.0.0</tag>
     </scm>
     <properties>
         <java.version>11</java.version>
