--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,15 @@
         <tag>HEAD</tag>
     </scm>
     <properties>
-        <java.version>11</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
     </properties>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
@@ -102,5 +103,6 @@
     <modules>
         <module>demo-io</module>
         <module>demo-net</module>
+        <module>tests</module>
     </modules>
 </project>
