--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -9,6 +9,7 @@
         <version>1.0.1-SNAPSHOT</version>
     </parent>
     <modules>
+        <module>tests-java</module>
         <module>tests-component</module>
     </modules>
 </project>
