--- a/tests/tests-java/pom.xml
+++ b/tests/tests-java/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>tests-component</artifactId>
+    <artifactId>tests-java</artifactId>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.corefine.demo</groupId>
@@ -8,10 +8,6 @@
         <version>1.0.1-SNAPSHOT</version>
     </parent>
     <modules>
-        <module>test-disruptor</module>
-        <module>test-ldap</module>
-        <module>test-mongo</module>
-        <module>test-zookeeper</module>
-        <module>test-netty</module>
+        <module>test-net</module>
     </modules>
 </project>
