--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
         <module>demo-io</module>
         <module>demo-net</module>
         <module>demo-utils</module>
+        <module>fine-map</module>
         <module>tests</module>
     </modules>
 </project>
